--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=book-rental
 
-spring.datasource.url=jdbc:mysql://localhost:3306/book-rental
+spring.datasource.url=jdbc:mysql://localhost:3306/book_rental
 spring.datasource.username=root
 spring.datasource.password=Mysql@530
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
